Add requested actions to PluginInfo and pass PluginInfo IdentityPlugin.getPluginSubject
Signed-off-by: Craig Perkins <cwperx@amazon.com>